--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "start": "vite",
+    "build": "vite build --base=/Vite-project/",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "gh-pages": "^6.3.0",
+    "gh-pages": "^6.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.8.0",
+    "react-router-dom": "^6.21.3",
     "react-scroll": "^1.9.3"
   },
   "devDependencies": {
@@ -27,7 +28,6 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.0.4"
+    "vite": "^5.1.4"
   }
 }
