--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "build": "vite build --base=/Vite-project/",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "gh-pages": "^6.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.21.3",
@@ -28,6 +27,7 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "vite": "^5.1.4"
   }
 }
