--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,9 @@ jobs:
       - name: Build
         run: |
           npm run build
-          # Copy 404.html to the dist directory
+          # Copy necessary files for SPA routing
           cp public/404.html dist/
+          cp public/_redirects dist/
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
